# cloaked-octo-lanarithms

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MatchTree.cpp  MatchTree.hpp  MatchTreeNode.cpp  MatchTreeNode.hpp  README.md  VertiWordSolver.cpp  VertiWordSolver.hpp  VertiWords  cmake_install.cmake  main.cpp  moo.txt  pseudo-main.cpp  runTests  tests.cpp  vertiWords.cpp  whattotest.cpp
testFiles/: test1.txt  test1_sol.txt  test2.txt  test2_sol.txt
